syntax = "proto3";

option go_package = "Storm-Hunt/storm-backend/proto";

package stormhunter;

import "google/api/annotations.proto";

service StormService {
  rpc StartStream(StartStreamRequest) returns (stream WeatherData) {
    option (google.api.http) = {
      post: "/v1/storm/start"
      body: "*"
    };
  }
}

message StartStreamRequest {
  string region = 1;
  string user_id = 2;
}

message WeatherData {
  string region = 1;
  float temp = 2;
  float humidity = 3;
  float lat = 4;
  float lon = 5;
  int32 wind_kmh = 6;
  string timestamp = 7;
}