import React, { useEffect, useState, useRef } from "react";
import { startStream, streamStormUpdates } from "./StormClient";
import { useKeycloak } from "@react-keycloak/web";
import StormMap from "./StormMap";
import "./StormTracker.css";

function decodeJwt(token) {
  try {
    const payload = token.split(".")[1];
    const decoded = JSON.parse(atob(payload));
    return decoded;
  } catch (e) {
    console.error("Failed to decode token:", e);
    return null;
  }
}

const StormTracker = () => {
  const { keycloak, initialized } = useKeycloak();
  const [stormData, setStormData] = useState({});
  const streamsRef = useRef({});

  // --- –£–Ω–∏–≤–µ—Ä—Å–∞–ª—å–Ω—ã–π –∑–∞–ø—É—Å–∫ —Å—Ç—Ä–∏–º–∞ ---
  const startStreamForRegion = async (region) => {
    try {
      if (!initialized) {
        console.log("‚è≥ Keycloak not initialized yet");
        return;
      }

      if (!keycloak.authenticated) {
        console.log("üîê User not authenticated, redirecting to login...");
        keycloak.login();
        return;
      }

      await keycloak.updateToken(30);
      const token = keycloak.token;

      let userId = keycloak.tokenParsed?.sub;
        if (!userId) {
         const decoded = decodeJwt(token);
            userId = decoded?.sub;
          }

           if (!token || !userId) {
             console.error("‚ùå Token or user ID is missing. Cannot start stream.");
          console.log("Decoded token:", decodeJwt(token)); // –¥–ª—è –æ—Ç–ª–∞–¥–∫–∏
           return;
           }

      if (!token || !userId) {
        console.error("‚ùå Token or user ID is missing. Cannot start stream.");
        return;
      }

      // –û—Å—Ç–∞–Ω–∞–≤–ª–∏–≤–∞–µ–º –ø—Ä–µ–¥—ã–¥—É—â–∏–π –ø–æ—Ç–æ–∫ (–µ—Å–ª–∏ –µ—Å—Ç—å)
      stopStream(region);

      // –°–æ–∑–¥–∞—ë–º AbortController –¥–ª—è —É–ø—Ä–∞–≤–ª–µ–Ω–∏—è –ø–æ—Ç–æ–∫–æ–º
      const controller = new AbortController();
      streamsRef.current[region] = controller;

      console.log(`üöÄ Sending startStream for region: ${region}, user: ${userId}`);

      // --- gRPC –ø–æ—Ç–æ–∫ ---
      startStream(
        region,
        userId,
        token,
        (response) => {
          console.log(`üå™ Received response for ${region}:`, response);

          // –ù–æ—Ä–º–∞–ª–∏–∑–∞—Ü–∏—è –æ–±—ä–µ–∫—Ç–∞
          const normalizedWeather = {
            region: response.region ?? region,
            temp: response.temp ?? 0,
            humidity: response.humidity ?? 0,
            lat: response.lat ?? 0,
            lon: response.lon ?? 0,
            wind_kmh: response.wind_kmh ?? response.windKmh ?? 0,
            timestamp: response.timestamp ?? "",
          };

          setStormData((prev) => {
            const updated = {
    ...prev,
    [region]: { ...normalizedWeather },
  };
  console.log("Updated stormData:", updated); // –î–ª—è –æ—Ç–ª–∞–¥–∫–∏
  return updated;
          });
        },
        controller.signal
      );
    } catch (err) {
      console.error(`üî• Stream error for ${region}:`, err);
    }
  };

  // --- –û—Å—Ç–∞–Ω–æ–≤–∫–∞ —Å—Ç—Ä–∏–º–∞ –¥–ª—è –∫–æ–Ω–∫—Ä–µ—Ç–Ω–æ–≥–æ —Ä–µ–≥–∏–æ–Ω–∞ ---
  const stopStream = (regionToStop) => {
    const controller = streamsRef.current[regionToStop];
    if (controller) {
      controller.abort();
      delete streamsRef.current[regionToStop];
      setStormData((prev) => {
        const updated = { ...prev };
        delete updated[regionToStop];
        return updated;
      });
      console.log(`üõë Stopped stream for region: ${regionToStop}`);
    }
  };

  // --- useEffect –ø—Ä–∏ –º–æ–Ω—Ç–∏—Ä–æ–≤–∞–Ω–∏–∏ ---
  useEffect(() => {
    console.log("useEffect triggered, Keycloak status:", {
      initialized,
      authenticated: keycloak.authenticated,
      token: !!keycloak.token,
    });

    const initStreams = async () => {
      if (initialized && keycloak.authenticated) {
        try {
          await keycloak.updateToken(30);
          if (keycloak.token) {
            console.log("üîë Token ready, starting storm streams...");
            startStreamForRegion("Atlantic");
            startStreamForRegion("Pacific");
          } else {
            console.error("Failed to refresh token ‚Äî redirecting to login");
            keycloak.login();
          }
        } catch (err) {
          console.error("Token refresh error:", err);
          keycloak.login();
        }
      } else if (initialized && !keycloak.authenticated) {
        console.log("üî∏ Not authenticated, redirecting to login...");
        keycloak.login();
      }
    };

    initStreams();
    // cleanup –ø—Ä–∏ —Ä–∞–∑–º–æ–Ω—Ç–∏—Ä–æ–≤–∞–Ω–∏–∏
    return () => {
      Object.keys(streamsRef.current).forEach((region) => stopStream(region));
    };
  }, [initialized, keycloak]);

  return (
    <div className="tracker-container">
      <h1 className="tracker-title">Storm Tracker üå™Ô∏è</h1>

      <div className="tracker-controls">
        <button
          className="tracker-btn start"
          onClick={() => startStreamForRegion("Atlantic")}
        >
          Start Atlantic
        </button>
        <button
          className="tracker-btn stop"
          onClick={() => stopStream("Atlantic")}
        >
          Stop Atlantic
        </button>

        <button
          className="tracker-btn start"
          onClick={() => startStreamForRegion("Pacific")}
        >
          Start Pacific
        </button>
        <button
          className="tracker-btn stop"
          onClick={() => stopStream("Pacific")}
        >
          Stop Pacific
        </button>
      </div>

      <div style={{ display: "flex", flexDirection: "row" }}>
        <StormMap region="Atlantic" storm={stormData["Atlantic"]} />
        <StormMap region="Pacific" storm={stormData["Pacific"]} />
      </div>
    </div>
  );
};

export default StormTracker;